@@ -1,4 +1,4 @@
-Copyright (c) 2014-2015, Brooke M. Fujita.
+Copyright (c) 2015, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
