@@ -1,3 +1,4 @@
+# coding: utf-8
 module Natto
 
   # Module `OptionParse` encapsulates methods and behavior 
@@ -116,7 +117,7 @@ module Natto
   end
 end
 
-# Copyright (c) 2014-2015, Brooke M. Fujita.
+# Copyright (c) 2015, Brooke M. Fujita.
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
